<resources>
    <string name="app_name">Sun Trail</string>
    <string name="main_menu_title">Main menu</string>
    <string name="main_menu_info_icon_text">Help</string>
    <string name="main_menu_inventory_icon_text">Inventory</string>
    <string name="main_menu_scan_icon_text">Scan</string>
    <string name="main_menu_all_boards_icon_text">View all boards</string>
    <string name="main_menu_settings_icon_text">Settings</string>
    <string name="main_menu_exit_icon_text">Exit</string>
    <string name="main_menu_no_scanner">This device does not have a camera or a NFC reader./n
    Board scanning functions are disabled. Game mode unavailable</string>
    <string name="info_screen_title">Basic information</string>
    <string name="info_screen_map_button">View map</string>
    <string name="how_to_play_button_description">How to play</string>
    <string name="how_to_play_image_description">Cartoon image displaying game play</string>
    <string name="run_scanner_button_description">Run scanner and start to play</string>
    <string name="game_info_screen_title">How to play</string>
    <string name="settings_title">Settings</string>
    <string name="settings_data_info_exists">Game has been started</string>
    <string name="settings_data_info_not_exists">Game has not been started</string>
    <string name="settings_use_flash">Use flash for QR scanner</string>
    <string name="checkbox_clear_data">Restart game?</string>
    <string name="button_clear_data">Restart</string>
    <string name="scanner_screen_title_nfc">Place your device onto the NFC tag</string>
    <string name="scanner_screen_title_qr">Scan the QR code with your device</string>
    <string name="default_image_description">Picture</string>
    <string name="planet_image_description">Picture of the planet</string>
    <string name="schema_image_description">Solar system diagram</string>
    <string name="sponsor_image_description">Sponsor logo</string>
    <string name="animation_image_description">Scanning animation</string>
    <string name="all_boards_screen_title">View all boards</string>
    <string name="all_boards_button_name_sun">Sun</string>
    <string name="all_boards_button_name_mercury">Mercury</string>
    <string name="all_boards_button_name_venus">Venus</string>
    <string name="all_boards_button_name_earth">Earth</string>
    <string name="all_boards_button_name_mars">Mars</string>
    <string name="all_boards_button_name_moon">Moon</string>
    <string name="all_boards_button_name_ceres">Ceres</string>
    <string name="all_boards_button_name_jupiter">Jupiter</string>
    <string name="all_boards_button_name_saturn">Saturn</string>
    <string name="all_boards_button_name_uranus">Uranus</string>
    <string name="all_boards_button_name_neptune">Neptune</string>
    <string name="all_boards_button_name_halley">Halley comet</string>
    <string name="planet_menu_button_read_text">View text</string>
    <string name="planet_menu_button_listen">Play audio</string>
    <string name="planet_menu_button_game">Play game</string>
    <string name="scanner_choice_title">Which scanner to use</string>
    <string name="scanner_choice_qr">QR Code</string>
    <string name="scanner_choice_nfc">NFC tag</string>
    <string name="scanner_choice_use_flash">Use flash</string>
    <string name="toast_game_data_clear">Game data cleared</string>
    <string name="toast_permission_qr">Camera permission granted</string>
    <string name="toast_no_scanner">Scanning functions unavailable</string>
    <string name="toast_scanning_success">Scanning success</string>
    <string name="toast_scanning_fail">Unknown planet</string>
    <string name="toast_athwale">Author: Ondřej Mejzlík (Athwale)</string>
    <string name="toast_author">Author: </string>
    <string name="toast_developer_mode">Developer mode enabled. NFC scanner will now output
        full info</string>
    <string name="toast_database_delete_fail">Database not deleted, restart app and try again</string>
    <string name="audio_player_play">Play</string>
    <string name="audio_player_pause">Pause</string>
    <string name="audio_player_stop">Stop</string>
    <string name="nfc_scanner_title">Place the device onto a NFC tag</string>
    <string name="nfc_scanner_scanner_activated">Close range sensors activated</string>
    <string name="nfc_scanner_scanner_running">Scanning in progress…</string>
    <string name="nfc_scanner_nfc_not_supported">This device does not support NFC</string>
    <string name="nfc_scanner_nfc_disabled">Enable NFC in system settings</string>
    <string name="sun_path_info_one">
    <![CDATA[
        <h2>The Sun trail</h2>
        <p>
        The Sun trail of Křtiny is a model of our Solar system scaled to 1:1 milliard.
        All models of planets and the Sun and the distances you have to walk on the trail are also
        scaled as written above.
        </p>
        <p>
        At each station you will find a sphere representing the given planet. You can read the
        information about the planet on the nearby board.
        </p>
        <p>
        Our Sun trail was inspired by: <a href="http://www.astrohk.cz/planetarni_stezka/">
        Planetary trail build by the observatory in Hradec Králové</a>, but it is not just a plain
        copy. The realization of this trail was originally supposed to be self aided. But thanks to
        the support of ŠLP Křtiny and the South moravian district it was possible to build a more
        elaborate version of this trail. The main part was being built in the year 2014 and opened
        int the year 2015.
        </p>
        <p>
        If you follow this trail you will be able to try on your own how close or far away the planets
        in our Solar system are. At the same time you will experience the nice landscape of Křtiny.
        </p>
    ]]>
    </string>
    <string name="sun_path_info_two">
    <![CDATA[
        <h2>The path</h2>
        <p>
        The Sun trail can be walked through from both ends. You can start at the Sun in Křtiny and finish
        at the Neptune near ŠLP Křtiny arboretum. Then you can continue and follow the yellow marking
        towards Jedovnice or get on the <a href="http://idsjmk.cz/jrady/201.pdf">IDS JMK number 201 (Křtiny, Hájovna na lukách)</a> bus.<br>
        Other than that you can approach the Sun from the other end of the trail and begin at Neptune.
        </p>
        <p>
        The trail follows well marked path mostly inside a forrest and has a length of about 4.5 km.
        For better orientation you can use the provided map. If you are going to return to Křtiny on foot
        double the distance. You will only need casual footwear for this trail.
        </p>
    ]]>
    </string>
    <string name="sun_path_info_four_schema">
    <![CDATA[
        <p>
        You can also take a shorter variant of the trail which ends at Saturn. After that you will
        return from Viligrunt. (Saturn is about 1.5km from the beginning of the trail).
        </p>
        <p>
        Translations of the information boards into English and German can be found in this app.<br>
        <b>You can also play a game during which you will use your phone or tablet.</b>
        </p>
        <h2>The Solar system</h2>
        <p>
        The following picture shows a scheme of the orbits of planets and other astronomical objects
        in our Solar system. These are those you will encounter on the Sun trail. The inner part of the
        Solar system is enlarged 10 times for clarity.<br>
        The gauge is in astronomical units.<br>(1 AU = 149 597 870,691 km)<br>
        The guidelines mark the positions of planets, (1) Ceres and comet 1P/Halley on September 1st 2003.
        </p>
    ]]>
    </string>
    <string name="sun_path_info_five">
    <![CDATA[
        <h2>News and contact</h2>
        <p>
        If you liked the trail, please drop us a line at <b>kontakt@slunecnistezka.cz</b>.
        And read what <a href="http://slunecnistezka.cz/www/index.php/napsali/">others have said</a>.
        </p>
        <p>
        If you want to know about any news, like us on <a href="https://www.facebook.com/pages/Slune%C4%8Dn%C3%AD-stezka-ve-K%C5%99tin%C3%A1ch/822780534412385">Facebook</a>
        or <a href="https://twitter.com/SlunecniStezka">Twitter</a>.<br>
        If you have any ideas or questions, please contact us at the e-mail address mentioned above.<br>
        A lot of people already helped us, we will be happy to hear from you!
        </p>
        <p>
        The Sun trail is a community project and is run under the management of <a href="http://www.krtiny.cz/">Křtiny.</a>
        More at <a href="http://slunecnistezka.cz/www/">The Sun trail</a>
        This application was created as a part of a bachelor thesis at FI MU. More at <a href="https://github.com/Athwale/BP-slunecni-stezka">Git hub</a>.
        </p>
        <p>
        Please also have a look at
        <a href="http://slunecnistezka.cz/www/index.php/priprava/">photos</a>  from building the trail.
        </p>
        <h2>Authors of photos</h2>
        <p>
        Sun: NASA/Goddard/SDO<br>
        Mercury: NASA/Messenger<br>
        Venus: NASA/JPL/Magellan<br>
        Earth: NASA/Goddard<br>
        Moon: Fred Locklear<br>
        Mars: NASA/Hubble<br>
        Ceres: NASA/JPL-Caltech<br>
        Jupiter: NASA/JPL/Voyager 1<br>
        Halley: Giotto Project, ESA<br>
        Saturn: NASA/ESA/JPL/Cassini<br>
        Uranus: NASA/JPL/Voyager 2/Joe Ruhinski<br>
        Neptune: NASA/JPL/Voyager 2
        </p>
        <h2>Sponsors</h2>
    ]]>
    </string>
    <string name="game_info_text_top">
       <![CDATA[
       <p>
       You can start the game by scanning an NFC tag or a QR code off a board on the Sun trail with
       a scanner from this app. The game can be started at any board except the first general
       information board.
       </p>
       <p>
       In the game mode you can buy and sell items at each stop along the trail.
       You earn credits for trading these goods.<br>
       Before you finish the game at the last stop, try to earn as much as you can.
       </p>
       <p>
       In the beginning you will be given a basic space ship. A trustworthy <b>Ikarus M</b>
       and <b>a small amount of space credits</b> Which are used as money.
       </p>
       <p>
       At each stop you must scan the code of the planet. Then you can enter the shop and trade items.
       </p>
       ]]>
    </string>
    <string name="game_info_text_bottom">
       <![CDATA[
       <p>
       Items can be sold at on planet. The price of each ware is not fixed, it may rise or fall on the next planet.
       But the price will only move on a not yet visited planet.
       <p>
       During the game you will have a chance to buy better, larger space ships. Those will allow you
       to transport larger amount of goods. The old ship will be sold when buying a new one.
       </p>
       <p>
       Based on how much credits you earn at the end of the game, you will be rewarded with a space
       fleet officer rank.
       </p>
       <p>
       <b>Have fun.</b>
       </p>
       ]]>
    </string>
    <string name="start_new_game_image_description">An image of a spaceship</string>
    <string name="ship_name_icarus">Icarus S</string>
    <string name="inventory_title">Inventory</string>
    <string name="inventory_cargo_bay">Cargo bay</string>
    <string name="inventory_credits">Credits</string>
    <string name="inventory_cargo_bay_contents">Cargo bay contents</string>
    <string name="inventory_coin_description">Coin image</string>
    <string name="list_size">Size:</string>
    <string name="list_price">Price:</string>
    <string name="list_cr">cr</string>
    <string name="item_image_description">An image of a ware</string>
</resources>