<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_menu_activity_relative_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@drawable/pict_yellow_activity_background"
    tools:context="ondrej.mejzlik.suntrail.activities.MainMenuActivity">

    <TextView
        android:id="@+id/main_menu_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:text="@string/main_menu_title"
        android:textColor="#ff0099cc"
        android:textStyle="bold" />

    <View
        android:id="@+id/main_menu_view_spacer"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:layout_marginTop="48dp"
        android:background="#ff0099cc"
        tools:ignore="UnknownId,UnknownIdInLayout" />

    <LinearLayout
        android:id="@+id/main_menu_linear_layout_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/main_menu_view_spacer"
        android:baselineAligned="false"
        android:gravity="center_horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/main_menu_button_how_to_play"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/yellow_button_background"
                android:drawableTop="@drawable/ic_menu_how_to_play"
                android:onClick="infoButtonsHandler"
                android:text="@string/how_to_play_button_description"
                android:textColor="#000000"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/main_menu_button_all_boards"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/yellow_button_background"
                android:drawableTop="@drawable/ic_menu_all_boards"
                android:onClick="allBoardsButtonHandler"
                android:text="@string/main_menu_all_boards_icon_text"
                android:textColor="#000000"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/main_menu_button_info"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/yellow_button_background"
                android:drawableTop="@drawable/ic_menu_info"
                android:onClick="infoButtonsHandler"
                android:text="@string/main_menu_info_icon_text"
                android:textColor="#000000"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/main_menu_button_settings"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="14dp"
        android:background="@drawable/yellow_button_background"
        android:drawableTop="@drawable/ic_menu_settings"
        android:onClick="settingsButtonHandler"
        android:text="@string/main_menu_settings_icon_text"
        android:textColor="#000000"
        android:textSize="12sp" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout3"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/main_menu_button_inventory"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/yellow_button_background"
            android:drawableTop="@drawable/ic_menu_inventory"
            android:onClick="InventoryButtonHandlerManiMenu"
            android:text="@string/main_menu_inventory_icon_text"
            android:textColor="#000000"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/main_menu_button_scan"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/yellow_button_background"
            android:drawableTop="@drawable/ic_menu_scan"
            android:onClick="scannerButtonHandler"
            android:text="@string/main_menu_scan_icon_text"
            android:textColor="#000000"
            android:textSize="12sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/main_menu_text_view_no_scanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/main_menu_no_scanner"
        android:textAlignment="center"
        android:textColor="#ca151e" />

</RelativeLayout>
