<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/inventory_fragment_relative_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pict_yellow_activity_background"
    tools:context="ondrej.mejzlik.suntrail.fragments.InventoryFragment">

    <TextView
        android:id="@+id/inventory_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:text="@string/inventory_title"
        android:textColor="#ff0099cc"
        android:textStyle="bold" />

    <View
        android:id="@+id/inventory_view_spacer"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:layout_marginTop="48dp"
        android:background="#ff0099cc"
        tools:ignore="UnknownId,UnknownIdInLayout" />

    <LinearLayout
        android:id="@+id/inventory_linear_layout_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/inventory_view_spacer"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/inventory_image_view_ship"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:adjustViewBounds="true"
                android:background="@drawable/transparent_button_background"
                android:contentDescription="@string/start_new_game_image_description"
                android:onClick="showIcarusInfoButtonHandler"
                android:scaleType="fitCenter"
                tools:src="@drawable/pict_icarus_info" />

            <TextView
                android:id="@+id/inventory_text_view_ship_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ship_name_icarus"
                android:textAlignment="center"
                android:textColor="#000000" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="60dp"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/inventory_cargo_bay_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/inventory_cargo_bay"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/inventory_cargo_bay_contents"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    tools:text="5/15" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/inventory_credits_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/inventory_credits"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/inventory_credits_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    tools:text="256" />

                <ImageView
                    android:id="@+id/inventory_image_view_coin"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:contentDescription="@string/inventory_coin_description"
                    android:src="@drawable/pict_coin" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/inventory_cargo_bay_contents_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inventory_linear_layout_top"
        android:layout_marginTop="16dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:text="@string/inventory_cargo_bay_contents"
        android:textColor="#ff0099cc"
        android:textStyle="bold" />

    <View
        android:id="@+id/inventory_view_spacer_items"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/inventory_cargo_bay_contents_title"
        android:layout_marginTop="16dp"
        android:background="#ff0099cc"
        tools:ignore="UnknownId,UnknownIdInLayout" />

    <ListView
        android:id="@+id/inventory_list_view_items"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/inventory_view_spacer_items"
        tools:listitem="@layout/list_view_inventory_row" />

</RelativeLayout>
