<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/game_info_fragment_relative_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pict_yellow_activity_background"
    tools:context="ondrej.mejzlik.suntrail.fragments.ScannerChoiceFragment">

    <TextView
        android:id="@+id/scanner_choice_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:text="@string/scanner_choice_title"
        android:textColor="#ff0099cc"
        android:textStyle="bold" />

    <View
        android:id="@+id/scanner_choice_view_spacer"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:layout_marginTop="48dp"
        android:background="#ff0099cc"
        tools:ignore="UnknownId,UnknownIdInLayout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/scanner_choice_view_spacer"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/scanner_choice_linear_layout_qr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <Button
                android:id="@+id/scanner_choice_button_scanner_qr"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/yellow_button_background"
                android:drawableTop="@drawable/ic_menu_scan_qr"
                android:onClick="qrScannerButtonHandler"
                android:paddingBottom="16dp"
                android:text="@string/scanner_choice_qr"
                android:textColor="#000000"
                android:textSize="12sp" />

            <CheckBox
                android:id="@+id/scanner_choice_checkBox_flash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/scanner_choice_use_flash"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/scanner_choice_linear_layout_nfc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical">

            <Button
                android:id="@+id/scanner_choice_button_scanner_nfc"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/yellow_button_background"
                android:drawableTop="@drawable/ic_menu_scan_nfc"
                android:onClick="nfcScannerButtonHandler"
                android:paddingBottom="16dp"
                android:text="@string/scanner_choice_nfc"
                android:textColor="#000000"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
