<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list_view_shop_row_linear_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/rowGreen"
    android:gravity="start"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/shop_row_image_view_item"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_gravity="center_vertical"
        android:adjustViewBounds="true"
        android:contentDescription="@string/item_image_description"
        android:scaleType="fitCenter"
        tools:src="@drawable/pict_a_crate_of_communication_devices" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/shop_row_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:textColor="@color/textBlack"
            android:textStyle="bold"
            tools:text="Communication devices" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/shop_row_item_size_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/list_size"
                android:textColor="@color/textBlack" />

            <TextView
                android:id="@+id/shop_row_item_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/textBlack"
                android:textStyle="italic"
                tools:text=" 11" />

            <TextView
                android:id="@+id/shop_row_item_price_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingEnd="0dp"
                android:paddingStart="16dp"
                android:text="@string/list_price"
                android:textColor="@color/textBlack" />

            <TextView
                android:id="@+id/shop_row_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/textBlue"
                android:textStyle="bold"
                tools:text=" 156" />

            <TextView
                android:id="@+id/shop_row_item_price_cr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingEnd="0dp"
                android:paddingStart="2dp"
                android:text="@string/list_cr"
                android:textColor="@color/textBlack" />

        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/shop_row_image_view_price_movement"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginEnd="5dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:contentDescription="@string/item_image_description"
        android:paddingBottom="3dp"
        android:paddingTop="3dp"
        android:scaleType="fitEnd"
        tools:src="@drawable/pict_arrow_green" />

</LinearLayout>